implemented duplication as a strategy